# helm-scanner-report

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/scanner-report/: action.yml
.github/actions/trivy-report/: action.yml
src/: scan.py
src/templates/: html.tpl
